--- a/programme.html
+++ b/programme.html
@@ -40,7 +40,7 @@ description: PowerUp
 
 		</span>
 	</div>
-	<img src="../images/sunday-people.jpg" class="x-speaker-image">
+	<img src="../images/programmes-hero.jpg" class="x-speaker-image">
 </div>
 
 </div>
@@ -179,7 +179,7 @@ description: PowerUp
 	<section id="p-workshops">
 		<div class="x-img-container speakers-hero programs-hero programs-img-only">
 			<div class="x-home__image-container">
-				<img src="../images/sunday-people.jpg" class="x-speaker-image">
+				<img src="../images/workshops.jpg" class="x-speaker-image">
 				<div class="programs-blue-bg">
 					<div class="row reverse-skew">
 						<div class="small-12 medium-9 medium-offset-3 columns">
@@ -241,7 +241,7 @@ description: PowerUp
 	<section id="p-seminars">
 		<div class="x-img-container speakers-hero programs-hero programs-img-only">
 			<div class="x-home__image-container">
-				<img src="../images/sunday-people.jpg" class="x-speaker-image">
+				<img src="../images/seminars.jpg" class="x-speaker-image">
 				<div class="programs-blue-bg">
 					<div class="row reverse-skew">
 						<div class="small-12 medium-9 medium-offset-3 columns">
@@ -282,7 +282,7 @@ description: PowerUp
 	<section id="p-sat-social">
 		<div class="x-img-container speakers-hero programs-hero programs-img-only" style="margin-bottom: -60px;">
 			<div class="x-home__image-container">
-				<img src="../images/sunday-people.jpg" class="x-speaker-image">
+				<img src="../images/sat-social.jpg" class="x-speaker-image">
 				<div class="programs-blue-bg" style="padding-bottom: 60px;">
 					<div class="row reverse-skew">
 						<div class="small-12 medium-9 medium-offset-3 columns">
