Updated 'programme.html' via CloudCannon

--- a/programme.html
+++ b/programme.html
@@ -182,7 +182,7 @@ description: PowerUp
 					<div class="row reverse-skew">
 						<div class="small-12 medium-9 medium-offset-3 columns">
 							<h1 class="white editable"> Skills Workshop </h1>
-							<p class="white editable">Over the course of the weekend members will attend all four of the workshops listed below.</p>
+							<p class="white editable">Over the course of the weekend, attendees will attend all four of the workshops listed below.</p>
 						</div>
 					</div>
 				</div>
