--- a/programme.html
+++ b/programme.html
@@ -86,7 +86,7 @@ description: PowerUp
 				<div class="programs-blue-bg">
 					<div class="row reverse-skew">
 						<div class="small-12 medium-9 medium-offset-3 columns">
-							<h1 class="white editable pad-top" id="p-plenaries"> Plenaries </h1>
+							<h1 class="white editable pad-top"> Plenaries </h1>
 							<p class="white editable">Over the course of the weekend, attendees will attend all plenaries listed below.
 							</p>
 						</div>
