--- a/programme.html
+++ b/programme.html
@@ -284,7 +284,7 @@ description: PowerUp
 				<div class="programs-blue-bg" style="padding-bottom: 60px;">
 					<div class="row reverse-skew">
 						<div class="small-12 medium-9 medium-offset-3 columns">
-							<h1 class="white editable" id="p-sat-social"> Saturday Night Social </h1>
+							<h1 class="white editable"> Saturday Night Social </h1>
 							<p class="white editable">Keen for a drink and wind-down after the first day of PowerUp? Join us at The Pavilions, located just a few metres
 								behind Sir John Clancy Auditorium at 6-8pm, straight after the closing plenary on Saturday. There will be a special
 								address, drinks and nibbles, and ample time to socialise before heading home for some much needed rest for day two.</p>
