Updated 'programme.html' via CloudCannon

--- a/programme.html
+++ b/programme.html
@@ -87,8 +87,7 @@ description: PowerUp
 					<div class="row reverse-skew">
 						<div class="small-12 medium-9 medium-offset-3 columns">
 							<h1 class="white editable pad-top"> Plenaries </h1>
-							<p class="white editable">Over the course of the weekend, attendees will attend all plenaries listed below.
-							</p>
+							<p class="white editable">Over the course of the weekend, attendees will attend all the plenaries listed below.</p>
 						</div>
 					</div>
 				</div>
@@ -109,12 +108,7 @@ description: PowerUp
 						<img src="../images/icons/powerup-plan.svg" class="other-icon editable" />
 						<h3 class="slab white editable"> The PowerUp Plan </h3>
 					</div>
-					<p class="white editable"> We’ll start the weekend off with a bang with MCs Julian Morrow, Charles Firth and Ben Jenkins from comedy team The Chaser.
-						We’ll then get stuck into GetUp’s vision for Australia and the plan to scale up our power by embracing an entirely
-						new model of organising for our movement. Becky Bond, Senior Advisor on the Bernie Sanders’ Election Campaign, will
-						take us through the Big Organising model she helped to pioneer in the U.S., and how it transformed the political status
-						quo.
-					</p>
+					<p class="white editable">We&rsquo;ll start the weekend off with a bang with MCs Julian Morrow, Charles Firth and Ben Jenkins from comedy team <em>The Chaser</em>. We&rsquo;ll then get stuck into GetUp&rsquo;s vision for Australia and the plan to scale up our power by embracing an entirely new model of organising for our movement. Becky Bond, Senior Advisor on the Bernie Sanders&rsquo; Election Campaign, will take us through the Big Organising model she helped to pioneer in the U.S., and how it transformed the political status quo.</p>
 					<div class="spacer"></div>
 					<div class="schedule-heading-container">
 						<img src="../images/icons/secret-weapon.svg" class="other-icon editable" />
@@ -266,7 +260,7 @@ description: PowerUp
 					</p>
 					<div class="spacer"></div>
 					<div class="schedule-heading-container">
-						<h3 class="slab white no-icon editable"> Recipe for an Action Group </h3>
+						<h3 class="slab white no-icon editable">Action Group Recipe</h3>
 					</div>
 					<p class="white editable"> You’ll explore the plan to build a national network of GetUp Action Groups in a seminar facilitated by members who’ve
 						been leading the first pilot groups over the last 6 months. You’ll learn about the systems, processes and tactics they’ve
