--- a/faqs.html
+++ b/faqs.html
@@ -77,7 +77,7 @@ Perhaps most importantly, you’ll build meaningful connections with other atten
                 Who will be speaking at PowerUp?
             </a>
             <!--ANSWER-->
-            <div class="panel editable"><p>Some of the most impactful community organisers are lining up to speak at PowerUp! These Australian and international change-makers will bring you exclusive insights into the state of the nation and the world, and share their strategies for building the people-power to win. &nbsp;For bios and more information on our speakers,&nbsp;<u><a href="https://powerup.org.au/speakers/">head to our speaker section on the navigation bar of the website</a>.</u></p></div>
+            <div class="panel editable"><p>Some of the most impactful community organisers are lining up to speak at PowerUp! These Australian and international change-makers will bring you exclusive insights into the state of the nation and the world, and share their strategies for building the people-power to win. &nbsp;</p><p>Here's a list of some of our incredible speakers:<br />Annie Kia - Lock The Gate Alliance<br />Becky Bond - Author of <u>Rules for Revolutionaries</u><br />Sally McManus - ACTU Secretary<br />Luke Hilakari - VIC Trades Hall<br />Ursula Alquier - Gasfield Free VIC<br />Liuanga Palu - Pacific Community Organiser<br />Paul Oosting - National Director, GetUp!</p><p>For more information on who's speaking at PowerUp click on the SPEAKERS option in the navigation bar at the top of this page.&nbsp;</p></div>
 
             <div class="faq-underline"></div>
 
