Updated 'faqs.html' via CloudCannon

--- a/faqs.html
+++ b/faqs.html
@@ -22,15 +22,7 @@ description: FAQ
                 Why should I come to PowerUp?
             </a>
             <!--ANSWER-->
-            <div class="panel editable">
-                <p>
-                    For too long, self-serving corporations and right-wing power brokers have captured our democracy, making inequality worse and ravaging our environment. We need to build a new form of power that breaks this hold.
-<br /><br />
-Securing a safe world for future generations is going to come down to us — and we’re going to have to step up now. At PowerUp, you will converge with a thousand passionate GetUp members for a weekend of shared values, practical skills workshops and strategy sessions. Then together we’ll launch a new national network of Action Groups that can take back power for everyday people. 
-<br /><br />
-If you want to get the skills, tools and connections to make a difference and you’re ready to take action, then we need you at PowerUp. <a class="blue" href="/ticket/">Buy your ticket now.</a>
-                </p>
-            </div>
+            <div class="panel editable"><p>For too long, self-serving corporations and right-wing power brokers have captured our democracy, making inequality worse and ravaging our environment. We need to build a new form of power that breaks this hold.<br /><br />Securing a safe world for future generations is going to come down to us &mdash; and we&rsquo;re going to have to step up now. At PowerUp, you will converge with a thousand passionate GetUp members for a weekend of shared values, practical skills workshops and strategy sessions. Then together we&rsquo;ll launch a new national network of Action Groups that can take back power for everyday people.<br /><br />If you want to get the skills, tools and connections to make a difference and you&rsquo;re ready to take action, then we need you at PowerUp. <a class="blue" href="/ticket/">Buy your ticket now.</a></p></div>
 
             <div class="faq-underline"></div>
              <!--QUESTION-->
@@ -77,7 +69,7 @@ Perhaps most importantly, you’ll build meaningful connections with other atten
                 Who will be speaking at PowerUp?
             </a>
             <!--ANSWER-->
-            <div class="panel editable"><p>Some of the most impactful community organisers are lining up to speak at PowerUp! These Australian and international change-makers will bring you exclusive insights into the state of the nation and the world, and share their strategies for building the people-power to win. &nbsp;</p><p><strong>Here's a list of some of our incredible speakers:</strong><br />Annie Kia - Lock The Gate Alliance<br />Becky Bond - Author of <u>Rules for Revolutionaries</u><br />Sally McManus - ACTU Secretary<br />Luke Hilakari - VIC Trades Hall<br />Ursula Alquier - Gasfield Free VIC<br />Liuanga Palu - Pacific Community Organiser<br />Paul Oosting - National Director, GetUp!</p><p>For more information on who's speaking at PowerUp click on the SPEAKERS option in the navigation bar at the top of this page.&nbsp;</p></div>
+            <div class="panel editable"><p>Some of the most impactful community organisers are lining up to speak at PowerUp! These Australian and international change-makers will bring you exclusive insights into the state of the nation and the world, and share their strategies for building the people-power to win. &nbsp;</p><p><strong>Here's a list of some of our incredible speakers:</strong><br />Annie Kia - Lock The Gate Alliance<br />Becky Bond - Author of <u>Rules for Revolutionaries</u><br />Sally McManus - ACTU Secretary<br />Luke Hilakari - VIC Trades Hall<br />Ursula Alquier - Gasfield Free VIC<br />Liuanga Palu - Pacific Community Organiser<br />Paul Oosting - National Director, GetUp!</p><p><a class="blue" href="https://powerup.org.au/speakers/">Click here to be directed to the Speakers section of the website, with more information and individual bios to read.</a></p></div>
 
             <div class="faq-underline"></div>
 
@@ -140,11 +132,7 @@ Perhaps most importantly, you’ll build meaningful connections with other atten
                 What doesn’t my ticket include?
             </a>
             <!--ANSWER-->
-            <div class="panel editable">
-                <p>
-                    PowerUp aims to keep ticket prices as low as possible by not including lunch in the ticket price. Instead a variety of food vendors will be open on-site. Accommodation and travel is also not included in the ticket price.
-                </p>
-            </div>
+            <div class="panel editable"><p>PowerUp aims to keep ticket prices as low as possible by not including lunch in the ticket price. Instead a variety of food vendors will be open on-site. Accommodation and travel is also not included in the ticket price.</p></div>
 
             <div class="faq-underline"></div>
                  <!--QUESTION-->
