Updated 'faqs.html' via CloudCannon

--- a/faqs.html
+++ b/faqs.html
@@ -69,7 +69,7 @@ Perhaps most importantly, you’ll build meaningful connections with other atten
                 Who will be speaking at PowerUp?
             </a>
             <!--ANSWER-->
-            <div class="panel editable"><p>Some of the most impactful community organisers are lining up to speak at PowerUp! These Australian and international change-makers will bring you exclusive insights into the state of the nation and the world, and share their strategies for building the people-power to win. &nbsp;</p><p><strong>Here's a list of some of our incredible speakers:</strong><br />Annie Kia - Lock The Gate Alliance<br />Becky Bond - Author of <u>Rules for Revolutionaries</u><br />Sally McManus - ACTU Secretary<br />Luke Hilakari - VIC Trades Hall<br />Ursula Alquier - Gasfield Free VIC<br />Liuanga Palu - Pacific Community Organiser<br />Paul Oosting - National Director, GetUp!</p><p><a class="blue" href="https://powerup.org.au/speakers/">Click here to be directed to the Speakers section of the website, with more information and individual bios to read.</a></p></div>
+            <div class="panel editable"><p>Some of the most impactful community organisers are lining up to speak at PowerUp! These Australian and international change-makers will bring you exclusive insights into the state of the nation and the world, and share their strategies for building the people-power to win. &nbsp;</p><p><strong>Here's a list of some of our incredible speakers:</strong><strong></strong><br />Annie Kia - Lock The Gate Alliance<br />Becky Bond - Author of <u>Rules for Revolutionaries</u><br />Sally McManus - ACTU Secretary<br />Luke Hilakari - VIC Trades Hall<br />Ursula Alquier - Gasfield Free VIC<br />Liuanga Palu - Pacific Community Organiser<br />Paul Oosting - National Director, GetUp!</p><p><a class="blue" href="https://powerup.org.au/speakers/">Click here to be directed to the Speakers section of the website, with more information and individual bios to read.</a></p></div>
 
             <div class="faq-underline"></div>
 
@@ -458,12 +458,7 @@ If you don’t have one already or you aren’t a Sydney resident, you may need 
                 What are some transport options for departing PowerUp at the end of each day?
             </a>
             <!--ANSWER-->
-            <div class="panel editable">
-                <p>
-                   It’s possible to catch a bus or order an Uber or Taxi from Gate 9 near Sir John Clancy Auditorium. You can check the bus timetable and connecting transport by <a href="https://transportnsw.info/trip#/" class="blue" target="_blank">clicking here to use Transport NSW Trip Planner.</a> GetUp will ensure there are staff ready to assist you on the day to make your way safely to your destination.
-                </p>
-                 
-            </div>
+            <div class="panel editable"><p>It&rsquo;s possible to catch a bus, or order an Uber or Taxi from Gate 9 near Sir John Clancy Auditorium. You can check the bus timetable and connecting transport by <a class="blue" target="_blank" href="https://transportnsw.info/trip#/">clicking here to use Transport NSW Trip Planner.</a> GetUp will ensure there are staff ready to assist you on the day to make your way safely to your destination.</p></div>
 
             
 
