Updated 'faqs.html' via CloudCannon

--- a/faqs.html
+++ b/faqs.html
@@ -208,7 +208,7 @@ Perhaps most importantly, you’ll build meaningful connections with other atten
                Can I give my ticket to someone else?
             </a>
             <!--ANSWER-->
-            <div class="panel editable"><p>No problem,&nbsp;<a class="blue" href="mailto:powerup@getup.org.au">email powerup@getup.org.au</a> to update the name and details attached to that ticket so we can ensure the new ticket holder will have an accurate programme.</p></div>
+            <div class="panel editable"><p>No problem,&nbsp;<a class="blue" href="mailto:powerup@getup.org.au">email powerup@getup.org.au</a> to update the name and details attached to that ticket so we can ensure the new ticket holder will have an accurate timetable.</p></div>
 
             <div class="faq-underline"></div>
 
@@ -231,7 +231,7 @@ Perhaps most importantly, you’ll build meaningful connections with other atten
                Can I purchase a ticket in-person at the event?
             </a>
             <!--ANSWER-->
-            <div class="panel editable"><p>Unfortunately it is not possible to purchase a ticket on the day. That&rsquo;s because a lot of planning goes into assigning PowerUp attendees into workshop groups and creating personalised programmes before the event. PowerUp is expected to be a sell-out event so if you&rsquo;re keen, <a class="blue" href="http://www.powerup.org.au/ticket">buy your ticket now!</a></p></div>
+            <div class="panel editable"><p>Unfortunately it is not possible to purchase a ticket on the day. That&rsquo;s because a lot of planning goes into assigning PowerUp attendees into workshop groups and creating personalised timetables before the event. PowerUp is expected to be a sell-out event so if you&rsquo;re keen, <a class="blue" href="http://www.powerup.org.au/ticket">buy your ticket now!</a></p></div>
 
             <div class="faq-underline"></div>
 
