Updated 'faqs.html' via CloudCannon

--- a/faqs.html
+++ b/faqs.html
@@ -39,15 +39,7 @@ description: FAQ
                 What will I learn at PowerUp?
             </a>
             <!--ANSWER-->
-            <div class="panel editable">
-                <p>
-                    Your PowerUp experience will focus on practical skills building, campaign strategy and community organising fundamentals.
-<br /><br />
-During workshops, you’ll learn about taking on leadership roles in your community, how to build and sustain effective groups, and other critical organising skills. At all-in plenaries, you’ll learn about GetUp’s strategy to scale up people-power in Australia, and how you can play a key role in it. 
-<br /><br />
-Perhaps most importantly, you’ll build meaningful connections with other attendees from your home electorate that could form the basis for a local Action Group.
-                </p>
-            </div>
+            <div class="panel editable"><p>Your PowerUp experience will focus on practical skills building, campaign strategy and community organising fundamentals.<br /><br />During the workshops and seminars, you&rsquo;ll learn about taking on leadership roles in your community, how to build and sustain effective groups, and other critical organising skills. At all-in plenaries, you&rsquo;ll learn about GetUp&rsquo;s strategy to scale up people-power in Australia, and how you can play a key role in it.<br /><br />Perhaps most importantly, you&rsquo;ll build meaningful connections with other attendees from your home electorate that could form the basis for a local Action Group.</p><p><a class="blue" href="https://powerup.org.au/programme/">Click here to check out our full programme!</a></p></div>
 
             <div class="faq-underline"></div>
 
