new home page logo

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ id: home
 	</div>
 	<div class="row">
 		<div class="small-12 columns reset">
-		<img src="images/powerup-header.png" class="home-hero-image-powerup" />
+		<img src="images/home-page-logo.png" class="home-hero-image-powerup" />
 			<div class="texttext">
 				<h3 class="sub-heading slab editable">Join us at GetUp&rsquo;s first national conference in Sydney on <span style="white-space: nowrap">23-24 September.</span></h3>
 		<a href="/ticket/" class="button home-hero-button editable">Secure your ticket</a>
