new chaser speakers

--- a/speakers.html
+++ b/speakers.html
@@ -198,7 +198,51 @@ description: PowerUp
 				Liuanga joined the Pacific Climate movement in Sydney in the lead up to the People’s climate march in 2015, when she helped organise a contingent of over 1000 people from the Pacific diaspora. Since then she has been working closely with religious, environmental and community leaders in Sydney around a new grass-roots initiative called the ‘Talanoa4Climate”; which aims to help our Pacific diaspora communities across Australia Talanoa or be in dialogue about Climate Change.
 			</p>
 		</div>
+
+		<div class="small-12 medium-6 large-4 columns speaker">
+			<img src="../images/Julian-Morrow-Headshot.jpg" class="speakers__img">
+			<h3 class="speakers__name normal editable">
+				Julian Morrow
+			</h3>
+			<h4 class="speakers__position slab editable">
+				The Chaser
+			</h4>
+			<div class="dotted-underline"> </div>
+			<p class="speakers__blurb editable">
+				Julian Morrow has made a career of public nuisance in various forms, co-founding satirical media empire The Chaser and joke company Giant Dwarf, as well as making TV shows including The Election Chaser, CNNNN, The Chaser's War on Everything, The Hamster Wheel, and The Checkout. His work has been nominated, unsuccessfully, for many awards, and prosecuted successfully in many courts. Giant Dwarf's latest venture, a live comedy venue at 199 Cleveland Street, has been described as "absolutely hilarious" by his accountant.
+			</p>
+		</div>
+
+
+		<div class="small-12 medium-6 large-4 columns speaker">
+			<img src="../images/Ben-Jenkins-Headshot.jpg" class="speakers__img">
+			<h3 class="speakers__name normal editable">
+				Ben Jenkins
+			</h3>
+			<h4 class="speakers__position slab editable">
+				The Chaser
+			</h4>
+			<div class="dotted-underline"> </div>
+			<p class="speakers__blurb editable">
+				Ben Jenkins is a writer, comedian, podcaster and television presenter. He is a writer/presenter on The Checkout (ABC1) & a writer/panellist on The Chaser’s Media Circus (ABC1). He is host and co-­creator of the comedy nights­ turned podcasts Story Club and Dragon Friends. He is also co-­host of the hit podcast Free to a Good Home. He co-­wrote the radio play Space Wizard for ABC RN.
+			</p>
+		</div>
   
+
+				<div class="small-12 medium-6 large-4 columns speaker">
+			<img src="../images/Charles-Firth-Headshot.jpg" class="speakers__img">
+			<h3 class="speakers__name normal editable">
+				Charles Firth
+			</h3>
+			<h4 class="speakers__position slab editable">
+				The Chaser
+			</h4>
+			<div class="dotted-underline"> </div>
+			<p class="speakers__blurb editable">
+				Charles Firth is a co-host of Radio Chaser on Triple M Sydney, and senior writer on the Podcast series Changemakers. He founded the satirical comedy team The Chaser.
+His work traverses all forms of dying media, from print to online to television and radio. He has won three Logies, an AFIs and been nominated for the prestigious Rose D’Or. On more serious topics, he is the author of American Hoax (Picador, 2006) and a regular writer for news.com.au. He was Executive Producer of The Roast (ABC2), and is managing editor of The Chaser Quarterly.
+			</p>
+		</div>
 
 </div>
 
