--- a/ticket.html
+++ b/ticket.html
@@ -16,7 +16,7 @@ description: PowerUp
     </div>
     <div class="small-12 medium-6 columns light-bg editable"><h4>Join us at PowerUp, GetUp&rsquo;s first national training event on 23-24 September at the University of NSW, Sydney.&nbsp;</h4><p><br />At PowerUp, you will join one thousand passionate GetUp members for a weekend of skills workshops, relationship-building and strategy sessions. Together, we&rsquo;ll launch a national network of GetUp Action Groups and make a plan to retake power for everyday people.<br /><br />If you want to get the skills, tools and connections to make a difference and you&rsquo;re ready to take action, then we need you at PowerUp.<br /><br />Spaces are limited and will sell-out, so please purchase your ticket now or <b>&nbsp;express your interest here for more information: <a href="/learn-more/">powerup.org.au/learn-more</a></b></p>
     
-    <p style="color:red;"><b style="color:red;">Free tickets are not applicable on Sydney tickets. Maximum 2 free tickets per person.</b></p>
+    <p style="color:red;"><b style="color:red;">The 24 hour PowerUp ticket sale has now ended.</b></p>
     
     </div>
 
