--- a/speakers.html
+++ b/speakers.html
@@ -244,6 +244,20 @@ His work traverses all forms of dying media, from print to online to television 
 			</p>
 		</div>
 
+
+		<div class="small-12 medium-6 large-4 columns speaker">
+			<img src="../images/Cam-Klose.jpg" class="speakers__img">
+			<h3 class="speakers__name normal editable">
+				Cam Klose
+			</h3>
+			<h4 class="speakers__position slab editable">
+				Communications Manager
+			</h4>
+			<div class="dotted-underline"> </div>
+			<p class="speakers__blurb editable">
+				Cam Klose was the Communications Manager of Cathy McGowan’s successful 2013 election campaign. He worked again on her 2016 campaign and has also been a Senior Adviser for the Greens and worked on environmental justice campaigns with 350.org Australia. Cam has done work with local government running workshops on social media campaigning. Cam can be found on twitter @camklose
+			</p>
+		</div>
 </div>
 
 
