Updated 'programme.html' via CloudCannon

--- a/programme.html
+++ b/programme.html
@@ -202,28 +202,19 @@ description: PowerUp
 						<img src="../images/icons/powerful-conversations.svg" class="other-icon" />
 						<h3 class="slab white editable"> Powerful Conversations </h3>
 					</div>
-					<p class="white editable"> One-to-one conversations are the backbone of a successful campaign – whether that’s through door-knocking, stalls, phone
-						calls, or with family and friends. In this workshop you will be introduced to a framework for persuasive conversations
-						that’ll help you engage with people’s values and concerns, shift their perspective and move them to action.
-					</p>
+					<p class="white editable">One-to-one conversations are the backbone of a successful campaign &ndash; whether that&rsquo;s through door-knocking, stalls, phone calls, or with family and friends. In this workshop you will be introduced to a framework for persuasive conversations to help you engage with people&rsquo;s values and concerns, shift their perspective and move them to action. This fun session will get you ready to take part in GetUp's core tactic of phone conversations.</p>
 					<div class="spacer"></div>
 					<div class="schedule-heading-container">
 						<img src="../images/icons/action-group-breakout.svg" class="other-icon" />
 						<h3 class="slab white editable"> Building an Inclusive Group </h3>
 					</div>
-					<p class="white editable"> GetUp is fighting for a fair and inclusive Australia. To achieve this, we need to build a GetUp movement where everyone
-						is welcome. In this workshop we’ll explore the values that drive our work and how we can bring them to life in groups.
-
-					</p>
+					<p class="white editable">GetUp is fighting for a fair and inclusive Australia. To achieve this, we need to build a GetUp movement where everyone is welcome. In this workshop we&rsquo;ll explore the values that drive our work and how we can bring them to life in groups. Together we&rsquo;ll define group norms and principles to set our groups up well so they continue to grow in numbers and effectiveness.</p>
 					<div class="spacer"></div>
 					<div class="schedule-heading-container">
 						<img src="../images/icons/state-of-the-nation.svg" class="other-icon editable" />
 						<h3 class="slab white editable"> Making Meetings Magic </h3>
 					</div>
-					<p class="white editable"> Meetings are where people work together to make collective decisions and, most importantly, plan for action. Put simply:
-						meetings are where the magic happens in groups, and getting meetings right is essential to having the impact we want
-						in the world. Come along to learn how to make meetings effective and explore what good facilitation looks like.
-					</p>
+					<p class="white editable">Meetings are where people work together to make collective decisions and plan for action &ndash; it&rsquo;s where the magic happens. This workshop will cover the basics of effective meetings; the role of facilitator; and some key tools facilitators and participants can use to keep meetings on track with healthy dynamics. As we build an amazing people powered network there&rsquo;s going to be a lot of meetings, so let&rsquo;s get them right!</p>
 				</div>
 			</div>
 		</div>
