--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ description: Track and optimize your sales team in real time
 	<section class="testimonial">
 		<div class="container flex">
 			<div class="testimonial-block">
-				<div class="square-image editable"><img src="https://source.unsplash.com/6anudmpILw4/600x400" alt="Jim James"></div>
+				<div class="square-image"><img src="https://source.unsplash.com/6anudmpILw4/600x400" alt="Jim James" class="editable"></div>
 				<blockquote>
 					<p class="editable">Hydra has shaped the business we have today. We have a repeatable sales process and a strategy to scale our team. I recommend Hydra to any business looking to improve their sales.</p>
 					<p class="editable author">Jim James - CEO of Global Corp.</p>
