Updated 'programme.html' via CloudCannon

--- a/programme.html
+++ b/programme.html
@@ -251,7 +251,7 @@ description: PowerUp
 					</p>
 					<div class="spacer"></div>
 					<div class="schedule-heading-container">
-						<h3 class="slab white no-icon editable">Action Group Recipe</h3>
+						<h3 class="slab white no-icon editable">Building Your Action Group</h3>
 					</div>
 					<p class="white editable"> You’ll explore the plan to build a national network of GetUp Action Groups in a seminar facilitated by members who’ve
 						been leading the first pilot groups over the last 6 months. You’ll learn about the systems, processes and tactics they’ve
