Updated 'faqs.html' via CloudCannon

--- a/faqs.html
+++ b/faqs.html
@@ -434,14 +434,7 @@ description: FAQ
                 What’s the best way to plan my public transport journey to PowerUp?
             </a>
             <!--ANSWER-->
-            <div class="panel editable">
-                <p>
-                   <a href="https://transportnsw.info/trip#/" class="blue" target="_blank">The easiest way to plan your trip is to click here to use Transport NSW Trip Planner.</a>
- 
-If you don’t have one already or you aren’t a Sydney resident, you may need to purchase an Opal card to make getting around on public transport easier and more cost effective. Opal cards can be purchased at most newsagents, news kiosks, convenience stores and train stations in Sydney. You may also like to pre-order your opal card. <a href="https://www.opal.com.au/" class="blue" target="_target">Click here to visit the Opal card website for more information.</a> If you have further questions regarding public transport to PowerUp contact the PowerUp team at <a href="mailto:powerup@getup.org.au" class="blue">powerup@getup.org.au.</a>
-                </p>
-                 
-            </div>
+            <div class="panel editable"><p><a class="blue" target="_blank" href="https://transportnsw.info/trip#/">The easiest way to plan your trip is to click here to use Transport NSW Trip Planner.</a>&nbsp; Many bus routes service UNSW &mdash; the most convenient bus stop to alight at is UNSW Gate 8 or Botany Street near High Street. Please note there are heavy roadworks on High Street and Gate 9 bus stop is closed.</p><p>The most convenient bus stops to add to your destination address are:<br />- High Street near UNSW Gate 8 (Westbound services only)<br />- Botany Street near High Street<br />- Barker Street near UNSW Gate 14<br />- Arthur Street near Clara Street<br />- Avoca Street after Belmore Road</p><p>Buses from Central Station (Eddy Avenue):<br />- Stand D: UNSW Express 891<br />- Stand C: 391, 395 - From Circular Quay (Alfred Street)<br />- Stand E: 391-2, 394, 397, 399 - From Bondi Junction, Burwood, Rockdale, Eastgardens<br />- Bus: 400, 410 - From Eastgardens, La Perouse, Little Bay<br />- Bus: 391, 392 - From Sydenham, Bondi Junction<br />- Bus: 357 - From Coogee, Newtown, Glebe, Leichhardt<br />- Bus: 370 - From Wolli Creek, Bondi Junction<br />- Bus: 348 &nbsp;-From Sans Souci, Eastgardens, City<br />- Bus: 302, 303 -From Kingsford, Leichhardt<br />- Metrobus 10 - From Coogee, Drummoyne<br />- Metrobus M50 - The M50 will no longer stop near the UNSW Kensington campus. Instead it will run along Belmore Road in Randwick (about 9mins walk from Gate 9)<br /><br />You will need an Opal card to use public transport in Sydney. Opal cards can be purchased and topped up with money at most newsagents, news kiosks, convenience stores and train stations.</p><p>Alternative services to/from City - Circular Quay:<br />- Routes 392, 394, L94, 396, 397 and 399. Routes M10 and M50 operate via City - Park Street</p></div>
 
             <div class="faq-underline"></div>
 
