Updated 'faqs.html' via CloudCannon

--- a/faqs.html
+++ b/faqs.html
@@ -443,7 +443,7 @@ description: FAQ
                 What are some transport options for departing PowerUp at the end of each day?
             </a>
             <!--ANSWER-->
-            <div class="panel editable"><p>It&rsquo;s possible to catch a bus, or order an Uber or Taxi near Gate 9 on High Street. You can check &nbsp;bus timetables and connecting transport by <a class="blue" target="_blank" href="https://transportnsw.info/trip#/">clicking here to use Transport NSW Trip Planner.</a> GetUp will ensure there are staff ready to assist you on the day to make your way safely to your destination.</p></div>
+            <div class="panel editable"><p>It&rsquo;s possible to catch a bus, or order an Uber or Taxi near Gate 9 on High Street. You can check bus timetables and connecting transport by <a class="blue" target="_blank" href="https://transportnsw.info/trip#/">clicking here to use Transport NSW Trip Planner.</a> GetUp will ensure there are staff ready to assist you on the day to make your way safely to your destination.</p></div>
 
             
 
