Updated 'faqs.html' via CloudCannon

--- a/faqs.html
+++ b/faqs.html
@@ -417,14 +417,7 @@ description: FAQ
                 I plan to use public transport. Where is the best place to arrive at UNSW?
             </a>
             <!--ANSWER-->
-            <div class="panel editable">
-                <p>
-                   The most convenient entry point to Sir John Clancy Auditorium is UNSW Gate 9 on High Street, Kensington. Most bus routes past UNSW will stop at Gate 9.
-                </p>
-                 <p>
-                  From Gate 9, there is a 100 metre walk to Sir John Clancy Auditorium, which is where we will start and end each day of PowerUp. <a href="http://fmtoolbox.unsw.edu.au/comms/KensingtonCampus.pdf" class="blue" target="_blank">Click here for a comprehensive map marking UNSW Gate entrances.</a>
-                </p>
-            </div>
+            <div class="panel editable"><p>There is construction work for ALTRAC Light Rail along High Street, &nbsp;established between Wansey Road and Avoca Street. Gate 8 or Botany Street near High Street are the two most convenient places to alight if you're travelling via public transport.&nbsp;<br /><a class="blue" target="_blank" href="http://fmtoolbox.unsw.edu.au/comms/KensingtonCampus.pdf">Click here for a comprehensive map marking UNSW Gate entrances.</a></p></div>
 
             <div class="faq-underline"></div>
            
