Updated 'faqs.html' via CloudCannon

--- a/faqs.html
+++ b/faqs.html
@@ -397,18 +397,9 @@ description: FAQ
             <div class="faq-underline"></div>
            
                   <!--QUESTION-->
-            <a class="_accordion slab editable">
-                How do I get to UNSW by public transport?
-            </a>
+            <a class="_accordion slab editable"></a>
             <!--ANSWER-->
-            <div class="panel editable">
-                <p>
-                   There are no train services to UNSW, but the venue is serviced by many bus routes that will take you to Gate 9 at UNSW on High Street, Kensington. Gate 9 is the closest campus entrance to Sir John Clancy Auditorium.
-                </p>
-                 <p>
-                   The easiest way to plan your trip is to <a href="https://transportnsw.info/trip#/" class="blue" target="_blank">click here to use Transport NSW Trip Planner.</a>
-                </p>
-            </div>
+            <div class="panel editable"></div>
 
             <div class="faq-underline"></div>
 
