--- a/ticket.html
+++ b/ticket.html
@@ -14,11 +14,14 @@ description: PowerUp
             <iframe width="100%" src="https://www.youtube.com/embed/MmiDkZfk-zM" frameborder="0" allowfullscreen></iframe>
         </div>
     </div>
-    <div class="small-12 medium-6 columns light-bg editable"><h4>Join us at PowerUp, GetUp&rsquo;s first national training event on 23-24 September at the University of NSW, Sydney.&nbsp;</h4><p><br />At PowerUp, you will join one thousand passionate GetUp members for a weekend of skills workshops, relationship-building and strategy sessions. Together, we&rsquo;ll launch a national network of GetUp Action Groups and make a plan to retake power for everyday people.<br /><br />If you want to get the skills, tools and connections to make a difference and you&rsquo;re ready to take action, then we need you at PowerUp.<br /><br />Spaces are limited and will sell-out, so please purchase your ticket now.</p>
+    <div class="small-12 medium-6 columns light-bg editable"><h4>Join us at PowerUp, GetUp&rsquo;s first national training event on 23-24 September at the University of NSW, Sydney.&nbsp;</h4><p><br />At PowerUp, you will join one thousand passionate GetUp members for a weekend of skills workshops, relationship-building and strategy sessions. Together, we&rsquo;ll launch a national network of GetUp Action Groups and make a plan to retake power for everyday people.<br /><br />If you want to get the skills, tools and connections to make a difference and you&rsquo;re ready to take action, then we need you at PowerUp.<br /><br />Spaces are limited and will sell-out, so please purchase your ticket now.<br><br>
+        <b>Tickets to PowerUp have sold out. </b>If you would like to go on the waiting list for your electorate, please email <a href="mailto:powerup@getup.org.au">powerup@getup.org.au</a> with your
+        name and federal electorate. If there have been cancellations, we can then let you know how you can secure your place.</p>
     
 
     
     </div>
+
 
     <div class="medium-12 small-12 columns">
         <style type="text/css">iframe{width:100%}</style><p>
