Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ description: Track and optimize your sales team in real time
 ---
 <section class="hero">
 	<div class="text-container">
-		<h1 class="editable">The last sales CRM <strong>you'll ever need</strong></h1>
-		<p class="subtext editable">Track and optimize your sales team in real time.</p>
+		<h1 class="editable">The last wallet <strong>you'll ever need</strong></h1>
+		<p class="subtext editable">Track and optimize your digital asset portfolio's in real time.</p>
 		<div class="cta button alt"><a href="/sign-up/">Get Started Free</a></div>
 		<div>
 			<img src="/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
@@ -17,8 +17,8 @@ description: Track and optimize your sales team in real time
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<h2>How can we <strong>double</strong> our sales revenue?</h2>
-				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources. </p>
+				<h2>How can we call ourselves <strong>Universal</strong> Wallet?</h2>
+				<p>Universal Wallet adapts to your business goals. By analyzing the competition's market moves & strategies, Universal Wallet optimizes the entire process; and shows you where you should be spending your resources. </p>
 			</div>
 			<div class="image">
 				<img src="/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
@@ -29,8 +29,8 @@ description: Track and optimize your sales team in real time
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<h2>How can I <strong>keep track</strong> of my sales team?</h2>
-				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources.</p>
+				<h2>How can I <strong>keep track</strong> of my digital assets?</h2>
+				<p>By using a multi-asset wallet such as ours...</p>
 			</div>
 			<div class="image">
 				<img src="/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
@@ -42,7 +42,7 @@ description: Track and optimize your sales team in real time
 		<div class="container flex">
 			<div class="text editable">
 				<h2>How can I <strong>forecast</strong> the next 90 days?</h2>
-				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources.</p>
+				<p>Hydra learns your business.</p>
 			</div>
 			<div class="image">
 				<img src="/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
@@ -55,15 +55,15 @@ description: Track and optimize your sales team in real time
 			<div class="testimonial-block">
 				<div class="square-image"><img src="https://source.unsplash.com/6anudmpILw4/600x400" alt="Jim James" class="editable"></div>
 				<blockquote>
-					<p class="editable">Hydra has shaped the business we have today. We have a repeatable sales process and a strategy to scale our team. I recommend Hydra to any business looking to improve their sales.</p>
-					<p class="editable author">Jim James - CEO of Global Corp.</p>
+					<p class="editable">The Universal Wallet has helped shaped the cryptocurrency landscape we have today. We have a repeatable sales process and a strategy to scale our team. I recommend the Universal Wallet to any business looking to tokenize some aspect of it's function.</p>
+					<p class="editable author">Dane Walter - CEO of UniBit Labs LLC.</p>
 				</blockquote>
 			</div>
 		</div>
 	</section>
 
 	<section class="bottom-cta">
-		<h2 class="editable"><strong>Improve</strong> your sales process today</h2>
+		<h2 class="editable"><strong>Improve</strong> your digital asset holdings today!</h2>
 		<div class="button alt"><a href="#">Get Started Free</a></div>
 	</section>
 </div>
