Updated 2 files via CloudCannon

--- a/contact/index.html
+++ b/contact/index.html
@@ -110,10 +110,10 @@
 	<input type="hidden" name="_encrypted_details" value="4f3800ca7a7d1ad3ec538b7cc04f2416131be4602f9dd6437a040ace9c175c" /></form>
 
 	<div class="contact-details">
-		<h3 class="editable" data-cms-source="/contact.html" data-cms-index="0">Address</h3>
+		<h3 class="editable" data-cms-source="/contact/index.html" data-cms-index="0">Address</h3>
 		<address><a target="_blank" href="https://www.google.com/maps/place/1+George+Street%2C+Dunedin%2C+New+Zealand">1 George Street, <br />Dunedin, <br />New Zealand</a></address>
 
-		<h3 class="editable" data-cms-source="/contact.html" data-cms-index="1">Email</h3>
+		<h3 class="editable" data-cms-source="/contact/index.html" data-cms-index="1">Email</h3>
 		<p><a href="mailto:support@example.com">support@example.com</a></p>
 	</div>
 </div>
