--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 ---
-title: The last sales CRM you'll ever need
-description: Track and optimize your sales team in real time
+title: Emma Hamid Nails
+description: Nail Salon based in Wallasey Village
 ---
 <section class="hero">
 	<div class="text-container">
 		<h1 class="editable">The last sales CRM <strong>you'll ever need</strong></h1>
 		<p class="subtext editable">Track and optimize your sales team in real time.</p>
-		<div class="cta button alt"><a href="/sign-up/">Get Started Free</a></div>
+		<div class="cta button alt"><a href="/sign-up/">Book online now</a></div>
 		<div>
 			<img src="/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
 		</div>
