Remove screenshot class from hero image

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ description: Nail Salon based in Wallasey Village
 		<p class="subtext editable">Track and optimize your sales team in real time.</p>
 		<div class="cta button alt"><a href="/sign-up/">Book online now</a></div>
 		<div>
-			<img src="/images/photo.png" alt="Screenshot" class="screenshot editable" />
+			<img src="/images/photo.png" alt="Screenshot" class="editable" />
 		</div>
 	</div>
 </section>
